fix the clue on mobile

--- a/assets/less/style.less
+++ b/assets/less/style.less
@@ -59,7 +59,7 @@
     background-color: gold;
     transform: scale(1.15);
     transition: transform 0.15s ease-out;
-    z-index: 100000;
+    z-index: 100;
 }
 
                                         
@@ -210,14 +210,20 @@ label {
 @import "keyboard";
 
 @media only screen and (max-width:48em) {
-    /* looks like z-index isn't playing nicely on the mobile with the transforms */
-    div.input-cell {
-/*        transform: scale(1);*/
-    }
-
     h3.current-clue {
         white-space: initial;
-        font-size: 66%;
+        position: fixed;
+        background: rgba(0,0,0,0.9);
+        color: white;
+        z-index: 10001;
+        padding: 20px;
+        margin: 0;
+        top: 0;
+        width: 100%;
+        left: 0;
     }
-    
+
+    div.cell-list {
+        padding-top: 120px;
+    }
 }
